# ricecooker

./: .git-blame-ignore-revs  .gitattributes  .gitignore  .pre-commit-config.yaml  .readthedocs.yml  .travis.yml  AGENTS.md  AUTHORS.rst  CLAUDE.md  CONTRIBUTING.md  CONTRIBUTING.rst  ISSUE.md  LICENSE  MANIFEST.in  Makefile  README.md  README.rst  REVIEWER_FEEDBACK.md  map_cache.py  preview.py  pyproject.toml  pytest.ini  requirements.txt  requirements_test.txt  setup.cfg  setup.py  tox.ini  travis_pypi_setup.py
.github/: ISSUE_TEMPLATE.md  dependabot.yml
.github/workflows/: call-contributor-issue-comment.yml  call-contributor-pr-reply.yml  call-holiday-message.yml  call-manage-issue-header.yml  call-update-pr-spreadsheet.yml  community-contribution-labeling.yml  manage_issue_header.yml  notify_team_new_comment.yml  pre-commit.yaml  pre-commit.yml  python-publish.yml  pythontest.yml  unassign-inactive.yaml  update-pr-spreadsheet.yml
PLAN/: conventions.md  index.md
docs/: 404.rst  Makefile  README.rst  authors.rst  chefops.md  conf.py  content_workflows.md  contributing.rst  csv_exercises.md  daemonization.md  design.md  downloader.md  exercises.md  files.md  history.rst  htmlapps.md  index.rst  index_api_reference.rst  index_utils.rst  installation.md  installation.rst  languages.md  make.bat  modules.rst  nodes.md  parsing_html.md  pdfutils.md  requirements.txt  reviewing_channels.md  ricecooker.rst  rubric.md  souschef.md  usage.md  usage.rst  utils.rst  video_compression.md
docs/_templates/: footer.html  layout.html
docs/community/: authors.rst  index.rst
docs/concepts/: content_workflows.md  developer_workflows.md  index.rst  introduction.md  reviewing_channels.md  terminology.md
docs/csv_metadata/: README.md  README.rst  csv_exercises.md  csv_workflow.md  index.rst  souschef.md
docs/developer/: README.md  corrections.md  daemonization.md  design_cli.md  ids.md  index.rst  kolibripreview.md  sushops.md  uploadprocess.md
docs/examples/: detokenify.pl  document_conversion.ipynb  exercises.ipynb  index.rst  (+1 more)
examples/: README.md  large_wikipedia_chef.py  sample_program.py  simple_chef.py  tutorial_chef.py  wikipedia_chef.py  wikipedia_video_chef.py
ricecooker/: __init__.py  __main__.py  chefs.py  classes.py  cli.py  commands.py  config.py  dashboard_client.py  django_settings.py  exceptions.py  managers.py  monitor.py  sample_program.py  sushi_bar_client.py
tests/: conftest.py  helpers.py  test_SCORM_metadata.py  test_add_file.py  test_archive_assets.py  test_argparse.py  test_carousel.py  test_chef_integration.py  test_classes.py  test_createchannel.py  test_csv_metadata.py  test_curriculum.py  test_data.py  test_downloader.py  test_exercises.py  test_files.py  test_imscp.py  test_imscp_pipeline.py  test_licenses.py  test_links.py  test_pdfutils.py  test_publish.py  test_references.py  test_requests.py  test_settings.py  test_slack.py  test_thumbnails.py  test_tree.py  test_url_utils.py  test_util_nodes.py  test_videos.py  test_youtube.py  test_youtube_cache.py  test_zip.py  vcr_config.py
(+195 files in other folders)
